# data_engineering_with_core_python

./: README.md  docker-compose.yml  project_folder_structure.txt  pyproject.toml
