[tool.poetry]
name = "my-data-pipeline"
version = "0.1.0"
description = "Local Python data engineering stack with SQLite, SQL Server, and Prefect"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "pipelines" }]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0"
pandas = "^2.2"
polars = "^0.20"
pyodbc = "^5.0"
alembic = "^1.13"
prefect = "^2.14"
pydantic = "^2.6"
python-dotenv = "^1.0"
duckdb = "^0.10"
requests = "^2.31"
openpyxl = "^3.1"
pyarrow = "^15.0"
loguru = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^8.1"
faker = "^24.8"
pandera = "^0.17"
great-expectations = "^0.18"
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
